# diktvox

./: .env.sample  LICENSE  README.md  pyproject.toml
diktvox/: __init__.py  __main__.py  extract.py  format.py  format_pdf.py  models.py  pdf.py
diktvox/ipa/: __init__.py  espeak.py  llm.py  rules.py
rules/: de_standard.yaml  la_standard.yaml
tests/: test_extract.py  test_format.py  test_format_pdf.py  test_ipa.py  test_rules.py
